/* Generated by nanopb-0.3.9.3 at Tue Sep 10 13:42:57 2019. */

syntax = "proto3";

enum TRIM_STATE{
    MIN_LIFT = 0;
    STBD_TACK = 1;
    PORT_TACK = 2;
    MAX_DRAG_STBD = 3;
    MAX_DRAG_PORT = 4;
    MAN_CTRL = 5;
}

message vehicle_state {
    TRIM_STATE state = 1;
    uint32 curHeelAngle = 2;
    uint32 maxHeelAngle = 3;
    uint32 controlAngle = 4;
    uint32 windAngle = 5;
    uint32 vIn = 6;
}